--- a/src/components/CardList/index.css
+++ b/src/components/CardList/index.css
@@ -1,7 +1,7 @@
 .card-list-li-card {
   padding: 15px;
   list-style-type: none;
-  box-shadow: 6px 6px 10px #ededed;
+  box-shadow: 6px 6px 10px #a3a1a1;
   margin: 20 0px;
   min-height: 100px;
   width: 100%;
